--- a/_source/skins/office2003/dialog.css
+++ b/_source/skins/office2003/dialog.css
@@ -25,7 +25,6 @@ body .cke_dialog
 
 	/* 'cke_dialog' element has been fixed positioned in all but IE6, while we
 		need it to be positioned to hold e.g. close button. */
-	position: relative;
 	_position: static;
 }
 
@@ -338,6 +337,19 @@ body .cke_dialog
 	_width: 99.9%;
 }
 
+/* The absolute position is required for IE7 on text inputs not to stretch dialog horizontally. (#8971)*/
+.cke_skin_office2003 .cke_browser_ie7 input.cke_dialog_ui_input_text,
+.cke_skin_office2003 .cke_browser_ie7 input.cke_dialog_ui_input_password
+{
+	position: absolute;
+}
+.cke_skin_office2003 .cke_browser_ie7 div.cke_dialog_ui_input_text,
+.cke_skin_office2003 .cke_browser_ie7 div.cke_dialog_ui_input_password
+{
+	height:14px;
+	position: relative;
+}
+
 /* Opera/IE doesn't leave enough padding in text input for cursor to blink in RTL. (#6087) */
 .cke_skin_office2003 .cke_browser_ie.cke_rtl input.cke_dialog_ui_input_text,
 .cke_skin_office2003 .cke_browser_opera.cke_rtl input.cke_dialog_ui_input_text,
@@ -549,15 +561,13 @@ body .cke_dialog
 
 .cke_skin_office2003 .cke_ltr a.cke_dialog_close_button
 {
-	right: 10px;
-	_right: 22px;
+	right: 22px;
 }
 
 .cke_skin_office2003 .cke_rtl a.cke_dialog_close_button,
 .cke_skin_office2003 .cke_rtl a:hover.cke_dialog_close_button
 {
-	left: 10px;
-	_left: 16px;
+	left: 16px;
 	_top: 6px;
 }
 
